
This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.6.14 - 2011-01-
- added rewrite rules for nginx (Florian Anderiasch)
- added compatibility for MySQL 5.5 with ext/mysql (Thorsten)
- added support to ban IPs from user tracking files (Thorsten)
- improved restore functionality (Thorsten)
- updated Dutch translation (Hans)
- updated German translation (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.6.13 - 2010-12-15
- clean package after compromised server (Thorsten)

Version 2.6.12 - 2010-12-13
- added experimental support for MariaDB (Thorsten)
- added empty LDAP configuration file as example (Thorsten)
- updated Arabic translation
- updated Dutch translation (Werner Helmich)
- updated French translation
- updated Norwegian Bokmål translation (harald@delelisten.no)
- fixed minor bugs (Thorsten, Gustavo Solt)

Version 2.6.11 - 2010-11-03
- fixed some bugs introduced with phpMyFAQ 2.6.10 (Thorsten)

Version 2.6.10 - 2010-11-02
- added several security enhancements (Thorsten)
- updated Chinese (Simplified) translation
- updated German translation (Thorsten)
- updated Portuguese translation (Fernando G. Monteiro)
- fixed minor bugs (Thorsten)

Version 2.6.9 - 2010-09-28
- fixed XSS vulnerability (Yam Mesicka, Thorsten)
- added Slovak translation (Tibor)
- added minor usability improvement in administration backend (Thorsten)
- fixed issue with embedded Google Analytics code (Thorsten)

Version 2.6.8 - 2010-08-31
- dropped Oracle database support (Thorsten)
- added new TinyMCE plugin for adding internal links by a suggest search (Thorsten)
- added basic HTML5 powered administration backend (Thorsten) 
- improved setup and update functionality (Thorsten, Bram)
- updated bundled TCPDF library to version 5.6.000 (Thorsten)
- updated bundled TinyMCE editor component to version 3.3.8 (Thorsten)
- updated bundled phpseclib to version 0.2.1 (Thorsten)
- updated Russian translation
- updated Portuguese translation