@@ -12,6 +12,7 @@ Version 2.6.14 - 2011-01-
 - improved restore functionality (Thorsten)
 - updated Dutch translation (Hans)
 - updated German translation (Thorsten)
+- Fixed issue with sending mails to category administrators (Gustavo Solt)
 - fixed minor bugs (Thorsten)
 
 Version 2.6.13 - 2010-12-15
